# case_atacado

./: .gitignore  Checking account_encoder.pkl  Housing_encoder.pkl  Saving accounts_encoder.pkl  Sex_encoder.pkl  analtsis_model.ipynb  app.py  best_model.pkl  main.py  pyproject.toml  target_encoder.pkl
